# assertllm — Root pyproject.toml
# Single package with optional extras for providers.
#
# Install: pip install assertllm[anthropic]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/pytest-plugin",
]

[tool.uv.sources]
llmtest-core = { workspace = true }
llmtest-pytest = { workspace = true }

[project]
name = "assertllm"
version = "0.3.0"
description = "The pytest for LLMs — fast, Pydantic-based assertions for AI applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Bahadır Araz", email = "bahadiraraz@protonmail.com" },
]
maintainers = [
    { name = "Bahadır Araz", email = "bahadiraraz@protonmail.com" },
]
keywords = ["llm", "testing", "ai", "pytest", "evaluation", "pydantic", "assertions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ollama = ["httpx>=0.25"]
all = ["assertllm[openai,anthropic,ollama]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
    "coverage>=7.0",
]

[project.entry-points."pytest11"]
assertllm = "llmtest_pytest.plugin"

[project.urls]
Homepage = "https://assertllm.dev"
Documentation = "https://docs.assertllm.dev"
Repository = "https://github.com/bahadiraraz/llmtest"
"Bug Tracker" = "https://github.com/bahadiraraz/llmtest/issues"
Changelog = "https://github.com/bahadiraraz/llmtest/releases"

# ─────────────────────────────────────────────
# Build system
# ─────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assertllm", "packages/core/llmtest_core", "packages/pytest-plugin/llmtest_pytest"]

[tool.hatch.build.targets.sdist]
include = ["assertllm/", "packages/core/llmtest_core/", "packages/pytest-plugin/llmtest_pytest/", "README.md", "LICENSE", "pyproject.toml"]

# ─────────────────────────────────────────────
# Dev tooling
# ─────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["N801"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"examples/*" = ["E402"]

[tool.mypy]
strict = true
python_version = "3.10"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
markers = [
    "llmtest: LLM tests (may incur API costs)",
    "llm_provider: specify LLM provider",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["packages/core/llmtest_core"]
omit = ["*/tests/*", "*/examples/*"]
